Fixed Virtual Scroll Flicker Issue and Implemented Accordion

--- a/src/pages/tk-products-list/tk-products-list.scss
+++ b/src/pages/tk-products-list/tk-products-list.scss
@@ -16,9 +16,6 @@ page-tk-products-list {
     }
     .tk-product-container{
      padding: 0;
-     virtual-scroller{
-         width: 100%;
-     }
      ion-list{
             .tk-item-wrapper{
                 // padding: 10px;
@@ -95,7 +92,40 @@ page-tk-products-list {
 }
 
 virtual-scroller {
-    width: 380px;
-    height: 1000px;
+    width: 100%;
+    height: 2000px;
+    // height: 100vh;
+    ion-list{
+        // height: 200px;
+    }
 }
   
+
+// Accordion Styles
+// .accordion {
+//     background-color: #eee;
+//     color: #444;
+//     cursor: pointer;
+//     padding: 18px;
+//     width: 100%;
+//     border: none;
+//     text-align: left;
+//     outline: none;
+//     font-size: 15px;
+//     transition: 0.4s;
+//   }
+  
+//   .active, .accordion:hover {
+//     background-color: #ccc; 
+//   }
+  
+  .panel {
+    display: none;
+    // overflow: hidden;
+  }
+  .panel.expanded {
+    display: block;
+  }
+  .panel.collapsed {
+    display: none;
+  }
